--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.p1 {
+  padding: 1rem;
+}
+
+.hover:hover {
+  cursor: pointer;
+}
+
+.footer {
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 0.5rem !important;
+}
+
+.ant-form-item {
+  margin-bottom: 1rem !important;
+}
+
+.ant-btn-primary {
+  background: rgb(9, 68, 125) !important;
+  border-color: rgb(9, 68, 125) !important;
+}
+
+.ant-btn-primary:hover {
+  background: white !important;
+  border-color: rgb(9, 68, 125) !important;
+  color: rgb(9, 68, 125) !important;
+}
+
+.mainPage {
+  display: flex;
+}
+
+.imagePage {
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.originalImg {
+  width: 400px;
+  height: 100vh;
+  background-image: url("./Image/loginImg.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+}
+.box {
+  width: 75%;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12);
+  margin: auto;
+  padding: 1rem 2rem;
+  border-radius: 5px;
+  /* border: 2px solid rgb(111, 112, 111); */
+}
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  /* margin-bottom: 1rem; */
+}
+.radioBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
