--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,7 @@ code {
 
 .mainPage {
   display: flex;
+  margin-top: -3rem;
 }
 
 .imagePage {
@@ -55,7 +56,7 @@ code {
 }
 .originalImg {
   width: 400px;
-  height: 100vh;
+  height: 80vh;
   background-image: url("./Image/loginImg.svg");
   background-position: center;
   background-repeat: no-repeat;
@@ -82,4 +83,13 @@ code {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.logoImg {
+  width: 200px;
+  height: 105px;
+  background-image: url("./Image/Asset\ 1.svg");
+  /* background-position: center; */
+  background-repeat: no-repeat;
+  margin:1rem 1rem 0rem 1rem;
 }
